kubernetes/argo-test/overlays/staging/database-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: opcode-postgres
spec:
  type: ExternalName
  externalName: staging-postgres-20180408.czwauqf3tjaz.us-east-2.rds.amazonaws.com
