kubernetes/argo-test/overlays/staging/redis-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: opcode-redis
spec:
  selector:
    app: operationcode-staging-redis-redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
